[package]
name = "mailhook"
version = "0.1.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.9.0"
mailin-embedded = { version = "0.6", features = ["rtls"] }
anyhow = "1.0"
actix-web = "3"
serde = { version = "1.0", features = ["serde_derive"] }
rusqlite = { version = "0.24", features = ["bundled"] }
log = "0.4"
melib = "0.6"
ureq = { version = "2", features = ["json"] }
serde_json = "1.0"

[patch.crates-io]
mailin = { path = 'patch/mailin' }

[dev-dependencies]
expect-test = "1.1"
