[package]
name = "mailhook"
version = "0.1.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.9.0"
mailin-embedded = { version = "0.6", features = ["rtls"] }
anyhow = "1.0"
actix-web = "4.0.0-beta.4"
serde = { version = "1.0", features = ["serde_derive"] }
rusqlite = { version = "0.24", features = ["bundled"] }
log = "0.4"
melib = { git = 'https://github.com/gfreezy/meli', rev = "05508d3" }
ureq = { version = "2", features = ["json"] }
serde_json = "1.0"
actix-files = "0.5"
md5 = "0.7"
uuid = { version = "0.8", features = ["v4"] }
once_cell = "1.5.2"

[patch.crates-io]
mailin = { path = 'patch/mailin' }

[dev-dependencies]
expect-test = "1.1"
